appfront/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    app.kubernetes.io/instance: nginx
    istio.io/rev: asm-1124-1
    kubernetes.io/metadata.name: nginx
