appfront/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: europe-west1-docker.pkg.dev/arcfdr-test-deployment/docker-registry/arkeagcp/nginx:latest
        name: nginx
        ports:
        - containerPort: 8080
