appfront/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 4000
    targetPort: 8080
  selector:
    app: nginx
