appfront/nginx-virtulservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - "nginx.nginx.arkea-gcp.net"
  gateways:
    - nginx/nginx-gateway
  http:
    - route:
        - destination:
            port:
              number: 4000
            host: nginx.nginx.arkea-gcp.net
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-internet-and-nginx
  #namespace is specified through kustomize
spec:
  selector:
    matchLabels:
      app: nginx
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-ingressgateway", "nginx"]
      to:
        - operation:
            methods: ["GET"]
            paths: ["/nginx*", "/version*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-mtls
spec:
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals: ["*"]
